# swig-playground

./: .gitignore  CMakeLists.txt  test.py
include/: mylibrary.h  mylibrary.i
src/: myexecutable.cpp  mylibrary.cpp
